[package]
name = "peach-demo"
version = "0.1.0"
authors = ["Max Fowler <maxhfowler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.1"
snafu = "0.6.9"
jsonrpc-core = "15.1.0"
jsonrpc-http-server = "15.1.0"